# edge-inference-research

./: .gitignore  README.md  nohup.out  pyproject.toml  requirements.txt  train_yolos_baseline_bf16.py  train_yolos_progressive_bf16accum_ste.py  vm_setup.sh
.agents/: main.md  todo.md
dev/: triton_custom_linear_bf16_acc.py
experiments/baseline/: config.yaml  run.sh
experiments/bf16_accum_lin1_patch0_attn0/: run.sh
results/: bf16_accum_lin0_patch0_attn0.json  bf16_accum_lin0_patch0_attn1.json  bf16_accum_lin0_patch1_attn0.json  bf16_accum_lin0_patch1_attn1.json  bf16_accum_lin1_patch0_attn0.json  bf16_accum_lin1_patch0_attn1.json  bf16_accum_lin1_patch1_attn0.json  bf16_accum_lin1_patch1_attn1.json  results_bf16_accum.json  results_bf16_default.json  results_fp32.json
results/baseline/: hparams.json  metrics_summary.json
results/baseline/logs/: train.jsonl
scripts/: download_coco_train.sh  download_coco_val.sh  run.sh
scripts/experiments/: bf16_accum_full_ablation.sh  bf16_accum_node1.sh  bf16_accum_node2.sh  bf16_accum_node3.sh
src/: __init__.py  bf16_accum.py  config.py  data.py  eval_coco.py  precision.py  run_experiment.py
src/data/: coco.py  transforms.py
src/eval/: map.py
src/patching/: __init__.py  patch_attention.py  patch_linear.py  schedule.py
src/triton_kernels/: triton_bf16acc_bmm.py  triton_bf16acc_linear_ste.py
src/utils/: checkpoints.py  logging.py
tests/: test_patching_is_safe.py  test_smoke_train_step.py
